--- a/tags_testx.css
+++ b/tags_testx.css
@@ -93,6 +93,15 @@
     border-bottom: 1px solid #d4d4d4;
 }
 
+.div-items:hover {
+    font-size: 20px;
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d4;
+    background-color: #e9e9e9;
+}
+
 /* /////// */
 .droup_down_x {
     position: absolute;
