--- a/tags_testx.css
+++ b/tags_testx.css
@@ -84,6 +84,16 @@
 
 .autocomplete-items-test {
     font-size: 20px;
+
+    position: absolute;
+    /* border: 1px solid #d4d4d4; */
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    /*position the autocomplete items to be the same width as the container:*/
+    top: 100%;
+    left: 0;
+    right: 0;
 }
 
 .div-items {
